--- a/src/AdysTech.InfluxDB.Client.Net.Core/AdysTech.InfluxDB.Client.Net.Core.csproj
+++ b/src/AdysTech.InfluxDB.Client.Net.Core/AdysTech.InfluxDB.Client.Net.Core.csproj
@@ -6,7 +6,7 @@
     <Product>AdysTech.InfluxDB.Client.Net</Product>
     <Company>AdysTech</Company>
     <Authors>AdysTech;mvadu;Herrenknecht AG</Authors>
-    <Version>0.9.0.6</Version>
+    <Version>0.9.0.7</Version>
     <PackageId>AdysTech.InfluxDB.Client.Net.Core.HK</PackageId>
     <Copyright>© AdysTech 2016-2019</Copyright>
     <PackageProjectUrl>https://github.com/AdysTech/InfluxDB.Client.Net</PackageProjectUrl>
@@ -45,7 +45,9 @@ It currently supports
 	<Compile Include="..\DataStructures\InfluxMeasurement.cs" Link="DataStructures\InfluxMeasurement.cs" />
 	<Compile Include="..\DataStructures\InfluxRetentionPolicy.cs" Link="DataStructures\InfluxRetentionPolicy.cs" />
 	<Compile Include="..\DataStructures\InfluxSeries.cs" Link="DataStructures\InfluxSeries.cs" />
+  <Compile Include="..\DataStructures\InfluxSeriesDict.cs" Link="DataStructures\InfluxSeriesDict.cs" />
   <Compile Include="..\DataStructures\InfluxResult.cs" Link="DataStructures\InfluxResult.cs" />
+  <Compile Include="..\DataStructures\InfluxResultDict.cs" Link="DataStructures\InfluxResultDict.cs" />
 	<Compile Include="..\DataStructures\InfluxValueField.cs" Link="DataStructures\InfluxValueField.cs" />
   <Compile Include="..\DataStructures\IInfluxValueField.cs" Link="DataStructures\IInfluxValueField.cs" />
 	<Compile Include="..\DataStructures\ServiceUnavailableException.cs" Link="DataStructures\ServiceUnavailableException.cs" />
@@ -59,6 +61,7 @@ It currently supports
 	<Compile Include="..\Interfaces\IInfluxMeasurement.cs" Link="Interfaces\IInfluxMeasurement.cs" />
 	<Compile Include="..\Interfaces\IInfluxRetentionPolicy.cs" Link="Interfaces\IInfluxRetentionPolicy.cs" />
 	<Compile Include="..\Interfaces\IInfluxSeries.cs" Link="Interfaces\IInfluxSeries.cs" />
+  <Compile Include="..\Interfaces\IInfluxSeriesDict.cs" Link="Interfaces\IInfluxSeriesDict.cs" />
   </ItemGroup>
 
   <ItemGroup>
