--- a/src/AdysTech.InfluxDB.Client.Net.Core.csproj
+++ b/src/AdysTech.InfluxDB.Client.Net.Core.csproj
@@ -7,10 +7,10 @@
     <Company>AdysTech</Company>
     <Authors>AdysTech;mvadu</Authors>
     <Version>0.21.0.0</Version>
-    <PackageId>AdysTech.InfluxDB.Client.Net.Core</PackageId>
+    <PackageId>AdysTech.InfluxDB.Client.Net.Core.HK</PackageId>
     <Copyright>© AdysTech 2016-2020</Copyright>
-    <PackageProjectUrl>https://github.com/AdysTech/InfluxDB.Client.Net</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/AdysTech/InfluxDB.Client.Net</RepositoryUrl>
+    <PackageProjectUrl>https://dev.azure.com/herrenknecht/Herrenknecht-UP/_packaging?_a=package&amp;feed=herrenknecht-up&amp;package=AdysTech.InfluxDB.Client.Net.Core.HK&amp;protocolType=NuGet</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/herrenknecht-ag/InfluxDB.Client.Net</RepositoryUrl>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
